--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-    max-width: 500px;
+    max-width: 95%;
     margin: 50px auto;
     padding: 20px;
     background-color:  white;
